--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
             </div>
         </section>
         <section class="container section2">
-            <h2 class="section2__title">Why choose us?</h2>
-            <p class="text section2__text">A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.</p>
+            <div class="section2__container">
+                <h2 class="section2__title">Why choose us?</h2>
+                <p class="text section2__text">A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.</p>
+            </div> 
             <div class="section2__wrapper">
                 <div class="section2__box">
                     <img src="./images/coffee-bean.svg" alt="image">
@@ -80,7 +82,14 @@
             </div>
         </section>
         <section class="container section3">
-            
+            <h2 class="section3__title">How it works</h2>
+            <div class="section3__dots-wrapper">
+                <div class="section3__dot"></div>
+                <hr>
+                <div class="section3__dot"></div>
+                <hr>
+                <div class="section3__dot"></div>
+            </div>
         </section>
     </main>
     <footer class="footer">
