--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
                 <hr>
                 <div class="section3__dot"></div>
             </div>
+            <div class="section3__wrapper">
+                <div class="section3__box">
+                    <h2 class="section3__box-num">01</h2>
+                    
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
