--- a/index.html
+++ b/index.html
@@ -93,9 +93,21 @@
             <div class="section3__wrapper">
                 <div class="section3__box">
                     <h2 class="section3__box-num">01</h2>
-                    
+                    <h2 class="section3__box-title">Pick your coffee</h2>
+                    <p class="text section__box-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+                </div>
+                <div class="section3__box">
+                    <h2 class="section3__box-num">02</h2>
+                    <h2 class="section3__box-title">Choose the frequency</h2>
+                    <p class="text section__box-text">Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
+                </div>
+                <div class="section3__box">
+                    <h2 class="section3__box-num">03</h2>
+                    <h2 class="section3__box-title">Receive and enjoy!</h2>
+                    <p class="text section__box-text">We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.</p>
                 </div>
             </div>
+            <button class="btn section3__btn">Create your plan</button>
         </section>
     </main>
     <footer class="footer">
