--- a/index.html
+++ b/index.html
@@ -111,7 +111,21 @@
         </section>
     </main>
     <footer class="footer">
-
+        <div class="container footer__wrapper">
+            <div class="footer__logo">
+                <img src="./images/logo-f.svg" alt="logo image">
+            </div>
+            <ul class="footer__list">
+                <li class="footer__list-item">home</li>
+                <li class="footer__list-item">about us</li>
+                <li class="footer__list-item">create your plan</li>
+            </ul>
+            <div class="footer__icons">
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
