--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <footer class="footer">
         <div class="container footer__wrapper">
             <div class="footer__logo">
-                <img src="./images/logo-f.svg" alt="logo image">
+                <img src="./images/logo-f.svg" alt="logo image" class="footer__img">
             </div>
             <ul class="footer__list">
                 <li class="footer__list-item">home</li>
